# oops

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  build.py  format.sh  installpydep.sh  packpydep.sh
.github/workflows/: ci.yml
module/: CMakeLists.txt
module/common/: CMakeLists.txt
module/common/include/oops/: enum_bitset.h  format.h  member.h  meta_type_list.h  once.h  range.h  str.h  str.tpp  str_detail.h  str_impl.h  view.h
module/common/src/: format.cpp  str.cc  str.cpp
module/common/test/: test_enum_bitset.cpp  test_format.cpp  test_once.cpp  test_range.cpp  test_str.cc  test_str.cpp  test_view.cpp
module/matrix/: CMakeLists.txt
module/matrix/include/oops/: coo.h  csr.h  matrix_market_io.h  matrix_type.h  read.h
module/matrix/src/: matrix_market_io.cpp
module/matrix/test/: test_coo.cpp  test_csr.cpp  test_matrix_market_io.cpp  test_matrix_type.cpp
module/matrix/test/case/: m_coo_real_sym.mtx  output.mtx
module/meta/: CMakeLists.txt
module/meta/include/oops/: type_list.h
module/meta/test/: test_type_list.cpp
module/profiling/: CMakeLists.txt
module/profiling/include/oops/: cpu_timer.h  system_info.h  trace.h  trace_def.h  trace_detail.h  unit.h
module/profiling/load/cpu_stepped/: CMakeLists.txt  cpu_stepped.cpp
module/profiling/src/: system_info.cpp  trace.cpp
module/profiling/test/: test_system_info.cpp  test_trace.cpp
module/profiling/tool/: CMakeLists.txt
module/profiling/tool/cmd_hijack_launcher/: cmd_hijack_launcher.py  config.yaml  hijack.py  setup.sh
module/profiling/tool/monitor/: CMakeLists.txt  monitor.cpp
module/profiling/tool/tarck_cpu_usage/: CMakeLists.txt  track_cpu_usage.cpp
profiling/: build.sh  main.cc  once.h  trace.h
